# isi_recruitment_task

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_PLAN.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.streamlit/: config.toml
scripts/: download_data.py  index_documents.py  test_llm.py  test_vector_store.py
src/knowledge_base_rag/: __init__.py  app.py  cli.py
src/knowledge_base_rag/core/: __init__.py  config.py  llm.py
src/knowledge_base_rag/data/: __init__.py  loader.py  processor.py
src/knowledge_base_rag/engine/: __init__.py  rag.py  retrieval.py
src/knowledge_base_rag/storage/: __init__.py  embeddings.py  vector_store.py
src/knowledge_base_rag/ui/: __init__.py  components.py  styles.py
src/knowledge_base_rag/ui/static/: styles.css
src/knowledge_base_rag/ui/static/templates/: assistant_message.html  header.html  loading.html  source_card.html  status_indicator.html  user_message.html  warning.html
