[project]
name = "knowledge-base-rag"
version = "0.1.0"
description = "Pure RAG - 750MB Domain Knowledge Base"
authors = [{name = "Pawel Waskiewicz"}]
dependencies = [
    # LlamaIndex core and extensions (pinned for compatibility)
    "llama-index-core>=0.10.30,<0.11",
    "llama-index-readers-file>=0.1.0,<0.2",
    "llama-index-vector-stores-qdrant>=0.2.0,<0.3",
    "llama-index-embeddings-huggingface>=0.2.0,<0.3",
    "llama-index-llms-ollama>=0.1.0,<0.3",
    "llama-index-llms-groq>=0.1.0,<0.2",
    
    # Vector DB (pinned for LlamaIndex compatibility)
    "qdrant-client>=1.9.0,<1.12",
    
    # Web UI
    "streamlit>=1.35.0,<2.0",
    
    # Document processing
    # Note: sentence-transformers pulls PyTorch - use CPU version in Docker
    "sentence-transformers>=2.6.0,<3.0.0",
    "rank-bm25>=0.2.2",  # BM25 for hybrid search
    "pypdf>=4.0.0",      # PDF parsing (main format in domaindata)
    # Removed: python-docx, python-pptx, openpyxl (not used - only PDFs)
    "beautifulsoup4>=4.12.0",  # HTML parsing
    "lxml>=5.0.0",             # XML/HTML parsing
    "markdown>=3.5.0",         # Markdown parsing
    
    # Configuration
    "pydantic-settings>=2.0.0,<3.0",
    "python-dotenv>=1.0.0",
    
    # HTTP client (for Ollama, Groq API calls)
    "httpx>=0.27.0",
    
    # Removed: boto3 (not used - data downloaded via script with requests)
]
requires-python = ">=3.11,<3.15"

[project.scripts]
kb-index = "knowledge_base_rag.cli:index_main"
kb-app = "knowledge_base_rag.cli:app_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_base_rag"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
